--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/entries/index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
